fix: increase gap in newitem panes.

--- a/source/sass/component/_newsitem.scss
+++ b/source/sass/component/_newsitem.scss
@@ -52,7 +52,7 @@ $c-newsitem-heading-color: var(--c-newsitem-heading-color, $color-primary) !defa
     .c-newsitem__header-right {
         display: flex;
         align-items: center;
-        gap: $base;
+        gap: calc($base * 2);
     }
 
     .c-newsitem__header-right {
